@startuml
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
    FontSize 14
    FontColor Black
    AttributeFontColor Black
    AttributeFontSize 12
    StereotypeFontSize 14
}

!define Dataclass class
hide empty members


    Dataclass DiseasePredictor {
        + names : List<String>
        + prob : Dict<String, Float>
        + imp_features : Dict<String, Any>
        + set_values(List<Dict>):
    }

    Dataclass ChronicPredictor extends DiseasePredictor {
        + feature_vector : Dict<String, Any>
        + risky_features : Dict<String, Any>
        + top_pred_rules : Dict<String, Any>
        + trajectory : Dict<String, Any>
        + set_values(Dict<String, Any>)
        + generate_sankey_plot()
    }

    Dataclass MedLabPredictor extends DiseasePredictor {
        + confirmed_diag : Dict<String, Any>
        + select_top_four(Dict<String, Any>)
        + set_values(self, data: Dict[str, Any])
    }

    Dataclass Recommendations {
        + names : List<String>
        + procedures : Dict<String, Any>
        + surgeries : Dict<String, Any>
        + labs : Dict<String, Any>
        + lifestyle_changes : Dict<String, Any>
        + set_values(List<str>, Dict<String, Any>)
        + filter_recommendations(Dict<String, Any>, Dict<String, Any>)
    }



    class DatabaseHandler {
        + MongoClient client
        + Database db
        + Collection collection
        + get_patients_from_mongo(int, String):
    }

    class Patient {
        + _patient_ID : int 
        + _patient_practice : String
        + _data : Dict<String,Any>
        + chronic_pred : ChronicPredictor
        + medlab_pred : MedLabPredictor
        + recommendations : Recommendations
        + reset_patient()
        + sort_diagnosis()
        + clean_data(List<String>)
        + collect_patient_data(Dict<String, Any>)
    }



    class FlaskApp {
        + app : Flask
        + patient1 : Patient
    }




Patient o-- ChronicPredictor
Patient o-- MedLabPredictor
Patient o-- Recommendations
FlaskApp o-- Patient
FlaskApp o-- DatabaseHandler

Recommendations -[hidden] MedLabPredictor
MedLabPredictor -[hidden] ChronicPredictor
 
@enduml
